hphp/test/slow/ext_icu/T87354924.php.expectf

Catchable fatal error: Argument 1 passed to IntlTimeZone::hasSameRules() must be an instance of IntlTimeZone, stdClass given in %s on line 5
